--- a/NiconicoUI/Onds.Niconico.UI.WinRT/Onds.Niconico.UI.WinRT.csproj
+++ b/NiconicoUI/Onds.Niconico.UI.WinRT/Onds.Niconico.UI.WinRT.csproj
@@ -109,7 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\NiconicoTextColorUtility.cs" />
+    <Compile Include="Extentions\NiconicoTextColorUtility.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
