--- a/NiconicoUI/Onds.Niconico.UI.WinRT/Onds.Niconico.UI.WinRT.csproj
+++ b/NiconicoUI/Onds.Niconico.UI.WinRT/Onds.Niconico.UI.WinRT.csproj
@@ -111,6 +111,7 @@
     <Compile Include="NiconicoWebTextSpan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extentions\NiconicoTextColorExtentions.cs" />
+    <Compile Include="ViewNiconicoWebTextAlgorithm.cs" />
     <Compile Include="ViewNiconicoWebTextArgs.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
