--- a/NiconicoUI/Onds.Niconico.UI.WinRT/Onds.Niconico.UI.WinRT.csproj
+++ b/NiconicoUI/Onds.Niconico.UI.WinRT/Onds.Niconico.UI.WinRT.csproj
@@ -108,6 +108,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NiconicoWebTextSegmentClickEventArgs.cs" />
     <Compile Include="NiconicoWebTextSpan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extentions\NiconicoTextColorExtentions.cs" />
